[gd_scene load_steps=11 format=3 uid="uid://c2ro12l6f7xuu"]

[ext_resource type="Script" path="res://games/kfp/customer.gd" id="1_8xdq1"]
[ext_resource type="Texture2D" uid="uid://dvurvh6atip8l" path="res://assets/Emote Pack/PNG/Pixel/Style 4/emote_faceHappy.png" id="2_drute"]
[ext_resource type="Script" path="res://move/NavigationMove2D.gd" id="2_w1kk5"]
[ext_resource type="Texture2D" uid="uid://hw8dl0ltqt0t" path="res://assets/Emote Pack/PNG/Pixel/Style 4/emote_faceAngry.png" id="3_0xuox"]
[ext_resource type="Texture2D" uid="uid://dwrgh3orljchb" path="res://assets/Emote Pack/PNG/Pixel/Style 4/emote_dots3.png" id="4_466gg"]
[ext_resource type="Texture2D" uid="uid://2cau7k08ftdx" path="res://games/kfp/assets/Chicken_Uniform_000_Chicken_Naked.png" id="6_wpaxm"]
[ext_resource type="Script" path="res://games/kfp/PeopleDetection.gd" id="7_hbjd8"]
[ext_resource type="PackedScene" uid="uid://drho3wwa07qog" path="res://games/kfp/emote.tscn" id="7_tyjf7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yw621"]
size = Vector2(8, 3)

[sub_resource type="CircleShape2D" id="CircleShape2D_bfdpf"]
radius = 8.06226

[node name="Okyaku" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_8xdq1")
happy_face = ExtResource("2_drute")
angry_face = ExtResource("3_0xuox")
wait_emote = ExtResource("4_466gg")

[node name="NavigationMove2D" type="NavigationAgent2D" parent="." node_paths=PackedStringArray("enemy")]
path_desired_distance = 10.0
target_desired_distance = 5.0
debug_enabled = true
script = ExtResource("2_w1kk5")
enemy = NodePath("..")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("6_wpaxm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_yw621")

[node name="PeopleDetection" type="Area2D" parent="." node_paths=PackedStringArray("customer")]
position = Vector2(0, -5)
collision_layer = 128
collision_mask = 128
script = ExtResource("7_hbjd8")
customer = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PeopleDetection"]
shape = SubResource("CircleShape2D_bfdpf")

[node name="OrderWaitTime" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="FoodWaitTime" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Emote" parent="." instance=ExtResource("7_tyjf7")]
position = Vector2(0, -5)

[node name="Emote" parent="Emote" index="0" node_paths=PackedStringArray("timer")]
timer = NodePath("../../FoodWaitTime")
hide_on_stop = false

[editable path="Emote"]
